Implement rudimentary touchscreen support in mus.

Add TouchController class that implements rudimentary touchscreen
support in mus. When there is 1 display and 1 touchscreen input-device
it matches them up and populates the relevant transform.

Small modifications to mus::Display and mus::PlatformDisplay to store
the display id and plumb display id and display size back out.

Change PlatformScreen implementation to call
NativeDisplayDelegate::GetDisplays() after a new display is added. If
this doesn't happen the list of DisplaySnapshots stored in Ozone isn't
updated and incomplete information is included with touch events.

BUG=601074
TEST=Touch works on Pixel.

Review-Url: https://codereview.chromium.org/2081253002
Cr-Commit-Position: refs/heads/master@{#401285}

Former-commit-id: c97cdcc4d02b8823790798f2e812d933a4045a03